compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_record_field_missing_inline.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_record_field_missing_inline.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × record literal has no such field
   ╭─[tests/fixtures/diagnostics/types/inference_record_field_missing_inline.ml:2:15]
 1 │ fn main() {
 2 │   let value = Point { x: 1 }.y;
   ·               ────────┬───────
   ·                       ╰── this inline record literal does not contain the projected field
 3 │   println("bad")
   ╰────
  help: project a field that exists on the record literal or bind the record
        before projecting
